<resources>
    <string name="app_name">Notepad</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_new_note">New note</string>
    <string name="text_hint">Text</string>
    <string name="action_revert">Revert</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
</resources>
