<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.amrani.kamil.notepad.MainActivity">
    <item
        android:id="@+id/action_new_note"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/action_new_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_revert"
        android:orderInCategory="20"
        android:title="@string/action_revert"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="20"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:orderInCategory="20"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
